log-collection-config/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: log-collection
  labels:
    argocd.argoproj.io/instance: log-collection
spec:
  to:
    kind: Service
    name: log-collection
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
